--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "kotick",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && clear && node --trace-warnings ./out/index.js",
+    "register_commands": "tsc && clear && node --trace-warnings ./out/register-commands.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,6 +16,10 @@
     "eslint": "^8.48.0"
   },
   "dependencies": {
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
+    "googleapis": "^126.0.1",
+    "pg-promise": "^11.5.4",
+    "typescript": "^5.2.2"
   }
 }
