--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && clear && node --trace-warnings ./out/index.js",
-    "register_commands": "tsc && clear && node --trace-warnings ./out/register-commands.js"
+    "start": "rm -fr ./out/ && tsc && clear && node --trace-warnings ./out/index.js",
+    "register_commands": "rm -fr ./out/ && tsc && clear && node --trace-warnings ./out/register-commands.js"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.48.0"
+    "eslint": "^8.48.0",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "googleapis": "^126.0.1",
-    "pg-promise": "^11.5.4",
-    "typescript": "^5.2.2"
+    "pg-promise": "^11.5.4"
   }
 }
